blood-bank/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bankapp-statefulset
spec:
  serviceName: "mysqldb"
  replicas: 1
  selector:
    matchLabels:
      app: bankapp-db
  template:
    metadata:
      labels:
        app: bankapp-db
    spec:
      containers:
      - name: bankapp-container
        image: guthulavasuu/bloodyapp:dbimage
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
